# regression-agent-app

./: .env.example  .gitignore  README.md  clients.toml  docker-compose.yml  seed-sources.toml
backend/: README.md  pyproject.toml
backend/app/: config.py  llm.py  main.py
backend/app/executors/: __init__.py  base.py  desktop.py  web.py
backend/app/graph/: action_loop.py  drive.py  drive_runner.py  router.py
backend/app/rag/: __init__.py  chunker.py  embeddings.py  ingest_cli.py  retriever.py  vectorstore.py
backend/app/rag/ingest/: __init__.py  confluence.py  local_docs.py  mrg.py
backend/app/routes/: chat.py  health.py
backend/app/tools/: clients_config.py  jira_scraper.py  scraper_cli.py
data/seed-corpus/: README.md
docs/: BUILD-PLAN.md
frontend/: .npmrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
