[project]
name = "regression-agent-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for the SBPPA regression agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "openai>=1.54.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
